--- a/skeleton/index.html
+++ b/skeleton/index.html
@@ -6,9 +6,33 @@
     <link rel="stylesheet" href="./box_model.css" />
   </head>
   <body>
-    <div id="first-div"></div>
+    <div id="first-div">
+      <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+      <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+      <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+      <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+      <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+
+    </div>
 
     <div id="second-div"></div>
+    <div id="third-div">
+        <p>hjdghjghjvhjsvljhgslhnkljjgasluikbmnb;klja'ihljhv</p>
+        <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+        <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+        <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+        <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+        <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+        <p>hjdghjghjvhjsvljhgslhnkljjgasluikbmnb;klja'ihljhv</p>
+        <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+        <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+        <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+        <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+        <p>SDFKJ:SLDKFJSD:LKFJSDL:KFJ:DLSKJ</p>
+    </div>
+  <div class="image-1-container">
+    <img id= "image" src="/Users/appacademy/Desktop/W2D5/skeleton/assets/cat.jpg" alt="">
+  </div>
 
     <p></p>
   </body>
